[package]
name = "rusty_url"
version = "0.1.0"
edition = "2021"
description = "A from-scratch WHATWG URL Standard implementation, aiming for parity with the `url` crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/baileyrd/rusty_url"
readme = "README.md"
keywords = ["url", "parser", "whatwg"]
categories = ["parser-implementations", "web-programming"]

[dependencies]
idna = "1"

[dev-dependencies]
